--- a/back/package.json
+++ b/back/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.2.1",
+    "rtcmulticonnection-server": "^1.3.2",
     "sequelize": "^5.21.12",
     "socket.io": "^2.3.0"
   }
