--- a/back/package.json
+++ b/back/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "pg": "^8.2.1",
     "rtcmulticonnection-server": "^1.3.2",
     "sequelize": "^5.21.12",
