--- a/back/package.json
+++ b/back/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "multer": "^1.4.2",
     "pg": "^8.2.1",
     "rtcmulticonnection-server": "^1.3.2",
