--- a/back/package.json
+++ b/back/package.json
@@ -13,5 +13,9 @@
     "rtcmulticonnection-server": "^1.3.2",
     "sequelize": "^5.21.12",
     "socket.io": "^2.3.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   }
 }
