--- a/back/package.json
+++ b/back/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "pg": "^8.2.1",
     "rtcmulticonnection-server": "^1.3.2",
