--- a/back/package.json
+++ b/back/package.json
@@ -19,5 +19,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
