--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "rtcmulticonnection": "^3.7.0"
+    "rtcmulticonnection": "^3.7.0",
+    "uuid": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
