--- a/back/package.json
+++ b/back/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "moment": "^2.27.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "pg": "^8.2.1",
