--- a/back/package.json
+++ b/back/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.27.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "password-validator": "^5.0.3",
     "pg": "^8.2.1",
     "rtcmulticonnection-server": "^1.3.2",
     "sequelize": "^5.21.12",
