--- a/back/package.json
+++ b/back/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^5.0.0",
     "connect-session-sequelize": "^6.1.1",
     "dotenv": "^8.2.0",
+    "email-deep-validator": "^3.3.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "moment": "^2.27.0",
@@ -14,6 +15,7 @@
     "multer": "^1.4.2",
     "password-validator": "^5.0.3",
     "pg": "^8.2.1",
+    "react-router": "^5.2.0",
     "rtcmulticonnection-server": "^1.3.2",
     "sequelize": "^5.21.12",
     "socket.io": "^2.3.0"
