--- a/back/package.json
+++ b/back/package.json
@@ -23,6 +23,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "engines": {
+    "node": "v13.x"
+  },
   "devDependencies": {
     "nodemon": "^2.0.4"
   }
