changed node name version

--- a/back/package.json
+++ b/back/package.json
@@ -24,7 +24,7 @@
     "dev": "nodemon server.js"
   },
   "engines": {
-    "node": "v13.13.0"
+    "node": "13.x"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
